--- a/frontend/src/components/ButtonContact.css
+++ b/frontend/src/components/ButtonContact.css
@@ -1,16 +1,9 @@
-.contact {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10vh;
-}
-
 .ButtonContact {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    width: 10vw;
-    height: 10vh;
-    border-radius: 3vh;
-    background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  width: 8vw;
+  height: 8vh;
+  background-color: #557c75;
 }
