--- a/frontend/src/pages/ContactForm.css
+++ b/frontend/src/pages/ContactForm.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 65vh;
+  width: 50vw;
 }
 
 .contact label {
@@ -15,6 +16,7 @@
   height: 4vh;
   margin-bottom: 3vh;
   padding-left: 20px;
+  border-radius: 5px;
 }
 
 .contact textarea {
@@ -22,15 +24,16 @@
   height: 20vh;
   margin-bottom: 3vh;
   padding-left: 20px;
+  border-radius: 5px;
 }
 
 .contact input ::placeholder {
-  color: grey;
+  color: rgb(250, 249, 249);
   opacity: 1;
 }
 
 .contact textarea ::placeholder {
-  color: grey;
+  color: rgb(250, 249, 249);
   opacity: 1;
 }
 
@@ -38,18 +41,16 @@
   text-decoration: none;
   padding: 9px;
   font-size: 1em;
-  color: #ffffff;
-  background-color: var(--flashy-orange);
-  border-radius: 19px;
+  border-radius: 5px;
   border: 4px solid #ffffff;
-  box-shadow: 3px 3px 12px #444444;
+  box-shadow: 3px 3px 12px #868585;
   margin-bottom: 15px;
 }
 
 .contactButton:hover {
   padding: 10px;
-  background-color: var(--dark-green);
-  border-radius: 24px;
+  background-color: #557c75;
+  border-radius: 5px;
   box-shadow: 1px 1px 4px #777777;
 }
 
